--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     left: 45%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #333;
+    color: black;
     font-size: 24px;
     margin: 20px;
 }
